--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,39 @@
+*{
+  box-sizing:border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'sans-serif';
+}
 .App {
   text-align: center;
+  display: flex;
+  margin: 0 auto;
+  max-width: 1280px;
+  padding: 0 15px;
+  min-height: 100vh;
+  border-radius: 10px;
+  /* flex-direction: column; */
+  background-color:lightslategray
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media (min-width: 800px) {
+  .APP {
+    padding: 0 100px;
+    margin-top: 5vh;
+    min-height: 90vh;
   }
 }
+/* @media (prefers-reduced-motion: no-preference) { */
+  /* .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+} */
 
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
